# sudoku-solver

./: .flake8  .gitignore  .pre-commit-config.yaml  pyproject.toml
sudoku_solver/: exceptions.py  main.py  utils.py  validators.py
tests/: test_validators.py
