[tool.poetry]
name = "sudoku-solver"
version = "0.0.1"
description = ""
authors = ["Kurt Portelli <kurtportelli9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pre-commit = "^2.20.0"
mypy = "^0.990"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
